# polars-trading

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bar_test.py  justfile  pyproject.toml
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_f2137eaf44442f4bc1c79ab517528d6e70ce22fc_20240920_165136_uncommited-changes.json
.codspeed/: results_1754671790095.json  results_1754671816862.json  results_1754671863258.json  results_1754671900000.json  results_1754671963641.json  results_1754672287613.json  results_1754672357248.json  results_1754672379972.json  results_1754672398962.json  results_1754672405699.json  results_1754672410691.json  results_1754672433812.json  results_1754672440755.json  results_1754672727090.json  results_1754672845576.json  results_1754672937627.json  results_1754673026697.json
.github/workflows/: ci.yml  codecov.yml  codspeed.yml  publish.yml
exercises/: Untitled.ipynb  test.ipynb
polars_finance/: __init__.py  bars.py  cross_validation.py  feature_importance.py  hyperparams.py  labels.py  sampling_features.py  ta.py  utils.py
polars_trading/: __init__.py  _utils.py  bars.py  config.py  typing.py
polars_trading/_testing/: data.py  features.py  labels.py
polars_trading/features/: frac_diff.py
polars_trading/labels/: dynamic_labels.py  labels.py
polars_trading/options/: __init__.py  black_scholes.py  noop.py
python/polars_finance/: bars.py  cross_validation.py  feature_importance.py  hyperparams.py  labels.py  sampling_features.py  ta.py  utils.py
src/: bars.rs  black_scholes.rs  frac_diff.rs  labels.rs  lib.rs  nbbo.rs  noop.rs  symmetric_cusum_filter.rs
tests/: conftest.py  test__utils.py  test_bars.py  test_config.py
tests/benchmarks/: benchmark_bars.py  benchmark_dynamic_labels.py  benchmark_features.py  benchmark_labels.py
tests/features/: test_frac_diff.py
tests/labels/: test_dynamic_labels.py  test_labels.py
tests/options/: test_black_scholes.py
tests/pd_benchmarks/: benchmark_bars_pd.py  benchmark_dynamic_labels_pd.py  benchmark_features_pd.py
tests/testing_utils/: __init__.py  pd_bars_helpers.py  pd_features_helpers.py
