[package]
name = "polars-trading"
version = "0.2.0"
edition = "2021"

[lib]
name = "polars_trading"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["abi3-py39"] }
pyo3-polars = { version = "0.22.0", features = [
    "derive",
    "dtype-struct",
    "lazy",
] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.49.1", features = ["dtype-struct", "lazy"] }
polars-arrow = { version = "0.49.1" }
num = "0.4.3"
libm = "0.2.15"

[features]
default = ["pyo3/extension-module"]
